# DeleteBackground

./: .gitignore  CLAUDE.md  README.md  launcher.py  main.pen  package-lock.json  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: build-exe.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py  websocket.py
app/core/: background_remover.py  batch_processor.py  exceptions.py  file_manager.py  folder_picker.py
app/models/: schemas.py
app/utils/: logger.py
scripts/: build_ico.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  conftest.py  test_api_routes.py  test_background_remover.py  test_batch_processor.py  test_config.py  test_file_manager.py  test_integration.py  test_schemas.py  test_websocket.py
