[project]
name = "delete-background"
version = "1.0.0"
description = "Batch background removal — local, free, fast."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C90", "N", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["app"]

[[tool.mypy.overrides]]
module = ["rembg", "rembg.*", "onnxruntime", "onnxruntime.*"]
ignore_missing_imports = true
